working on flexibility of board, game stops at win, loss and tie

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
       <br>
       <div>{{board}}</div>
+      <br>
+      <div>{{players_current_locations}}</div>
       
 <!--      <div ng-bind="input | capitalize"></div>
      <div>{{"hello" | capitalize}}</div>
@@ -41,7 +43,7 @@
     <!-- filters -->
 
 
-    
+
     </div>
   </body>
 </html>
