--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/angular.js"></script>
+    <script src="https://cdn.firebase.com/js/client/1.0.18/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/0.7.1/angularfire.min.js"></script>
     <script src="js/main.js"></script>
   </head>
   <body>
@@ -12,7 +14,7 @@
 
         <!-- size of board -->
         <form ng-submit="setupBoard()">
-          <div ng-hide="initiate">
+          <div ng-hide="gameboard.initiate">
           <label>Boardsize:</label>
           <input type="number" name="range" ng-model="range" min="3" max="7">
           <label>Player 1:</label>
@@ -24,16 +26,17 @@
         </form>
 
 
-          <h1 ng-show="initiate">{{playerOne}}</h1>
-          <h1 ng-show="initiate">{{playerTwo}}</h1>
+          <h1>{{playerOne}}</h1>
+          <h1>{{playerTwo}}</h1>
 
           <h1>T Rex Toe</h1>
-          <h3 ng-bind="itsyourturn"></h3>
-          <h1 ng-show="over" ng-bind="end_game"></h1>
+          <h3 ng-bind="gameboard.itsyourturn"></h3>
+          <div ng-show="gameboard.over" ng-bind="gameboard.end_game"></div>
+          <div ng-click="playAgain()">play again?</div>
       
       
       <div
-        ng-show="initiate" ng-repeat="row in board" class="clear"
+         ng-repeat="row in gameboard.board" class="clear"
        >
           <div 
           ng-repeat="col in row track by $index"
@@ -41,8 +44,8 @@
           cell:true,
           borderbottom: $parent.$index!=(range-1),
           borderleft: $index!=0,
-          dino: board[$parent.$index][$index]==1,
-          toe: board[$parent.$index][$index]==2
+          dino: gameboard.board[$parent.$index][$index]==1,
+          toe: gameboard.board[$parent.$index][$index]==2
           }"
           ng-click="setPic($parent.$index, $index)"
           ></div>
