--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <!-- <label>Boardsize:</label>
           <input type="number" name="range" ng-model="range" min="3" max="7"> -->
           <label>Player 1:</label>
-          <input type="text" ng-model="playerOne" value="Player 1">
+          <input type="text" ng-model="gameboard.playerOne" value="Player 1">
           <label>Player 2:</label>
-          <input type="text" ng-model="playerTwo" value="Player 2">
+          <input type="text" ng-model="gameboard.playerTwo" value="Player 2">
           <input type="submit">
           </div>
         </form>
@@ -44,10 +44,12 @@
           ng-repeat="col in row track by $index"
           ng-class="{
           cell:true,
-          borderbottom: $parent.$index!=(range-1),
+          borderbottom: $parent.$index!=(2),
           borderleft: $index!=0,
           dino: gameboard.board[$parent.$index][$index]==1,
-          toe: gameboard.board[$parent.$index][$index]==2
+          toe: gameboard.board[$parent.$index][$index]==2,
+          
+          winner: gameboard.swc[$parent.$index][$index]==1
           }"
           ng-click="setPic($parent.$index, $index)"
           ></div>
